fix typos and tasks 1.2 1.3

--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Методом Монте-Карло называют целую множество различных метоедов в совершенно разных областях от физики до экономики. Основная суть этих методов заключается в использовании случайных величин для получения различных состояний исследуемой системы. "
+    "Методами Монте-Карло называют множество различных методов в совершенно разных областях от физики до экономики. Основная суть этих методов заключается в использовании случайных величин для получения различных состояний исследуемой системы. "
    ]
   },
   {
@@ -47,12 +47,10 @@
    "metadata": {},
    "source": [
     "### Задание 1.1 \n",
-    "(10% от общей оценки)\n",
-    "\n",
     "Напишите функцию, вычисляющую точный объем $d$-мерной сферы с помощью явного выражения. \n",
     "Объем многомерной сферы радиуса $R$ в $d$-измерениях дается формулой: \n",
     "$$\n",
-    "V_d = \\frac{\\pi^{d/2}} {\\Gamma(1 + d/2)} R^d\n",
+    "V_d = \\frac{\\pi^{d/2}} {\\Gamma(1 + d/2)}\n",
     "$$\n",
     "где $\\Gamma(x)$ - гамма функция, значение которой можно получить из scipy.special."
    ]
@@ -101,9 +99,7 @@
    "metadata": {},
    "source": [
     "### Задание 1.2\n",
-    "(20% от общей оценки)\n",
-    "\n",
-    "Напишите функцию, вычсляющую объем сферы методом Монте-Карло на псевдослучайных числах (используя, например `numpy.random.rand`)."
+    "Напишите функцию, вычисляющую объем сферы методом Монте-Карло на псевдослучайных числах (используя, например `numpy.random.rand`)."
    ]
   },
   {
@@ -133,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Постройте график зависимости числа узлов $N$ при котором достигается относительная точность порядка $10^{-8}$ от размерности сферы $D$. Для относительной точности используйте выражение $\\epsilon = (V_{exact} - V_{random})/V_{exact}$. Для нахождения соответствующего $N$ используйте алгоритм удвоения $N$, который вы использовали для оценки точности интегралов в 6-ой домашней работе."
+    "Постройте график зависимости относительной точности $\\epsilon$ которая достигается при фиксированном $N$ от размерности сферы $D$. Для относительной точности используйте выражение $\\epsilon = (V_{exact} - V_{random})/V_{exact}$."
    ]
   },
   {
@@ -150,21 +146,23 @@
    "metadata": {},
    "source": [
     "### Задание 1.3\n",
+    "Напишите функцию, вычисляющую объем сферы методом Монте-Карло на квазислучайной последовательности Соболя.\n",
     "\n",
-    "(20% от общей оценки)\n",
+    "Для установки библиотеки `sobol_seq`:\n",
     "\n",
-    "Напишите функцию, вычсляющую объем сферы методом Монте-Карло на квазислучайной последовательности Соболя.\n",
     "\n",
-    "Для установки библиотеки `sobol_seq` выполните команду \n",
-    "`pip install sobol_seq --user` в командном окне (если вы используете Jupyter Notebook в составе Anaconda откройте Anaconda Prompt и выполните команду pip в ней, после чего перезапустите Jupyter Notebook).\n"
+    "выполните `pip install sobol_seq` в Jupyter или\n",
+    "\n",
+    "выполните команду `pip install sobol_seq --user` в командном окне (если вы используете Jupyter Notebook в составе Anaconda откройте Anaconda Prompt и выполните команду pip в ней, после чего перезапустите Jupyter Notebook).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!pip install sobol_seq <-- uncomment to install sobol_seq\n",
     "import sobol_seq"
    ]
   },
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Сравните точность вчисления объема для квазислучайной погрешности, построив такой же график $N(D)$ при которых достигается точность $10^{-8}$, как для псевдослучайных чисел."
+    "Сравните точность вычисления объема для квазислучайной и псевдослучайной последовательностей, рассчитав  $\\epsilon(D)$, при таком же значении $N$, как в предыдущем задании. Постройте обе зависимости $\\epsilon(D)$ на одном графике в логарифмической шкале по $\\epsilon$."
    ]
   },
   {
@@ -227,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Сделайте выводы об эффективности квазислучайных последовательностей. "
+    "Сделайте вывды о работе псевдослучайной и квазислучайной последовательностях. "
    ]
   },
   {
@@ -245,9 +243,7 @@
    "source": [
     "## Задание 2\n",
     "\n",
-    "(50% от общей оценки)\n",
-    "\n",
-    "Рассмотрим решетку $n\\times n$ в которой каждой ячейке соответствует спин $\\sigma_i$ равный $+1$ или $-1$. При этом между соседними ячейками существует энергия взаимодействия\n",
+    "Рассмотрим решетку $n\\times n$, в которой каждой ячейке соответствует спин $\\sigma_i$ равный $+1$ или $-1$. При этом между соседними ячейками существует энергия взаимодействия\n",
     "$$\n",
     "E_i = -J \\sigma_i \\sigma_j\n",
     "$$\n",
@@ -257,9 +253,9 @@
     "$$\n",
     "где суммирование подразумевается только по соседним с $i$-ой ячейкой.\n",
     "\n",
-    "При нулевой температуре энергитически более выгодным состоянием является состояние когда все спины одинаково ориентированы. Однако при ненлевой температуре вероятность перехода в более возбужденное состояние пропорциональна $\\sim \\exp(-\\Delta E/ k T)$.\n",
+    "При нулевой температуре энергитически более выгодным состоянием является состояние, когда все спины одинаково ориентированы. Однако при ненулевой температуре вероятность перехода в более возбужденное состояние пропорциональна $\\sim \\exp(-\\Delta E/ k T)$.\n",
     "\n",
-    "Явное численное моделирование такой системы (модели Изинга) является проблемотичным, поскольку количество возможных состояний системы $2^N$, где $N$ - общее число узлов, и уже для двумерной сетки $16\\times 16$ это число становится астрономически большим. "
+    "Явное численное моделирование такой системы (модели Изинга) является проблематичным, поскольку количество возможных состояний системы $2^N$, где $N$ - общее число узлов, и уже для двумерной сетки $16\\times 16$ это число становится астрономически большим. "
    ]
   },
   {
@@ -271,7 +267,7 @@
     "2. Выбираем случайную ячейку\n",
     "3. Переворачиваем её спин и считаем изменение энергии $\\delta E$ данной ячейки.\n",
     "4. Если изменение энергии отрицательное, оставляем спин перевернутым\n",
-    "5. Если изменение энергии положительное, оставляем спин перевернутым с вероятностью с вероятностью $\\exp(-\\delta E/kT)$\n",
+    "5. Если изменение энергии положительное, оставляем спин перевернутым с вероятностью $\\exp(-\\delta E/kT)$\n",
     "6. Повторяем пункты 2-5 нужное количество раз\n",
     "\n",
     "Спустя достаточно большое количество повторений устанавливается равновесное состояние. "
@@ -337,9 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Напишите функцию, которая $N^2$ раз для разных случайных $(i,j)$ меняет спин в зависимости от изменения энергии, согласно пунктам 4. и 5. Можете использовать как псевдослучайную, так и квазислучайную последовательность, на ваш выбор. \n",
-    "\n",
-    "Обратите внимание, что если вам нужно сгенерировать большое количество случайных чисел и далее использовать их в цикле, то быстрее будет за один раз сгенерировать нужное количество случайных чисел и потом использовать их, чем генерировать их по одному в цикле. "
+    "3. Напишите функцию, которая $N^2$ раз для разных случайных $(i,j)$ меняет спин в зависимости от изменения энергии, согласно пунктам 4. и 5. "
    ]
   },
   {
@@ -420,13 +414,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Далее задаются начальные параметры: \n",
-    "**Nt** - количество точек по температуре, \n",
-    "**N** - линейный размер решетки, \n",
-    "**eqStep** - количество попыток переворота спина в течение которых система приводится к равновесному сосотоянию, обратите внимание, что это число должно увеличиваться пропорционально размеру всей сетки,\n",
-    "**steps** - количество попыток переворота спина в течение на которых рассчитывается значения энергии и намагниченности, нужно для усреднения случайных значений\n",
+    "В следующей ячейке кода зададим начальные параметры: \n",
     "\n",
-    "Подберите наибольшие значения этих параметров таким образом, что бы ваша программа выполнялась выполнялась за разумно короткое время "
+    "**Nt** - количество точек по температуре, \n",
+    "\n",
+    "**N** - линейный размер решетки, \n",
+    "\n",
+    "**eqStep** - количество попыток переворота спина, в течение которых система приводится к равновесному сосотоянию. Обратите внимание, что это число должно увеличиваться пропорционально размеру всей сетки,\n",
+    "\n",
+    "**steps** - количество попыток переворота спина, в течение которых рассчитывается значения энергии и намагниченности (нужно для усреднения расчитанных значений по ансамблю состояний, близких к равновесному)"
    ]
   },
   {
@@ -442,13 +438,6 @@
     "\n",
     "T = np.linspace(0.5, 5, Nt); \n",
     "E, M = np.zeros(Nt), np.zeros(Nt)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Далее представлен основной блок программы, соединяющий всё написанное выше в одно целое. Здесь, в цикле по точкам температуры, задается случайное начальное состояние, приводится к равновесному, и далее вычисляется средние значения энергии и намагниченности, и строится их график."
    ]
   },
   {
@@ -491,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Интерпретируйте с точки зрения физики полученные графики. Описыввают ли они поведение феромагнетиков и фазовые переходы?"
+    "Интерпретируйте с точки зрения физики полученные графики. Описывают ли они поведение ферромагнетиков и фазовые переходы?"
    ]
   },
   {
@@ -507,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Дополнительно. Задайте новое сосотояние системы с достаточно большим $N$ и визуализируйте его думя цветами (например с помощью `plt.scatter`). Примените несколько раз к этому сосотоянию функциию makeFlip с низкой и с высокой температурами. Объясните наблюдаемое. "
+    "Задайте новое сосотояние системы с достаточно большим $N$ и визуализируйте его думя цветами (например с помощью `plt.scatter`). Примените несколько раз к этому сосотоянию функциию makeFlip с низкой и с высокой температурами. Объясните наблюдаемое"
    ]
   },
   {
