Fix typos in function descriptions

--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "def getSphereVolumeExact(D, R = 1.0):\n",
     "    \"\"\"\n",
-    "    Функция вычисляет значение объема D-мерной сферы радиуса R рекурентным методом\n",
+    "    Функция вычисляет значение объема D-мерной сферы радиуса R по явной формуле\n",
     "\n",
     "    --------\n",
     "    Аргументы:\n",
@@ -110,7 +110,7 @@
    "source": [
     "def getSphereVolumePseudorandom(N, D, R = 1):\n",
     "    \"\"\"\n",
-    "    Функция вычисляет значение объема D-мерной сферы радиуса R\n",
+    "    Функция вычисляет значение объема D-мерной сферы радиуса R методом Монте-Кало на псевдослучайных числах\n",
     "\n",
     "    --------\n",
     "    Аргументы:\n",
@@ -190,7 +190,7 @@
    "source": [
     "def getSphereVolumeQuasirandom(N, D, R = 1):\n",
     "    \"\"\"\n",
-    "    Функция вычисляет значение объема D-мерной сферы радиуса R\n",
+    "    Функция вычисляет значение объема D-мерной сферы радиуса R методом Монте-Кало на квазислучайных числах\n",
     "\n",
     "    --------\n",
     "    Аргументы:\n",
@@ -315,7 +315,8 @@
    "source": [
     "def getDeltaE(i, j, state):\n",
     "    '''\n",
-    "    Функция расчитывает изменение энергии ячейки (i,j) в случае ее переворота (при этом функция сама не меняет сосотояния state)\n",
+    "    Функция расчитывает и возвращает изменение энергии ячейки (i,j) в случае ее переворота (не меняя состояния state)\n",
+    "    \n",
     "    ---------\n",
     "    Аргументы:\n",
     "    i - int, адресс ячейки вдоль оси 0\n",
@@ -344,7 +345,8 @@
    "source": [
     "def makeFlip(T, state):\n",
     "    '''\n",
-    "    Функция расчитывает изменение энергии ячейки (i,j) в случае ее переворота (при этом функция сама не меняет сосотояния state)\n",
+    "    Функция N^2 раз переворачивает спин, и принимает решение оставить его перевернутым или нет, согласно правилам 4. и 5.\n",
+    "    \n",
     "    ---------\n",
     "    Аргументы:\n",
     "    T - float, положительное число, безразмерный коэфициент, характеризующий температуру, равный kT/J\n",
