ENH: add several more Qs

--- a/make_your_choice.tex
+++ b/make_your_choice.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage{amsmath}
 \usepackage[russian]{babel}
 \usepackage[utf8]{inputenc}
 
@@ -9,15 +10,10 @@
 \section*{Вопросы по выбору}
 
 
-Предложенные задачи заметно различаются по сложности. Для каждой задачи указан максимальный балл, который можно получить за идеальное решение.
-
-
-
-\subsection*{Задачи на 10 баллов.}
-
 \begin{enumerate}
 
-\item Вычислить плотность энергии идеального ферми-газа в как функцию температуры в $d$ измерениях. 
+\item Вычислить плотность энергии идеального ферми-газа в как функцию 
+температуры в $d$ измерениях.
 
 \textit{Указание} Под плотностью энергии будем понимать отношение $Е/N$, где $N$ это число частиц. В безразмерных единицах вычислять нужно отношение $E/N\epsilon_F$, где $\epsilon_F$ обозначена энергия Ферми. Аналогично, обезразмеренная температура это отношение $T/\epsilon_F$. Результатом решения задачи будет вычисленный график зависимости $E/N\epsilon_F$ от $T/\epsilon_F$. Требуется также сравнить численные результаты с поведением в предельных случаях $T \ll \epsilon_F$ (вырожденный газ) и $T \gg \epsilon_F$ (классический газ + вириальная поправка).
 
@@ -29,7 +25,8 @@
 \item Для $d = 1$
 \end{enumerate}
 
-\item Вычислить плотность энергии и теплоемкость идеального Бозе-газа в зависмости от температуры в $d$ измерениях. 
+\item Вычислить плотность энергии и теплоемкость идеального Бозе-газа в
+зависмости от температуры в $d$ измерениях.
 
 \begin{enumerate}
 \item Для $d=3$. Особое внимание обратить на окрестность температуры бозе-конденсации.
@@ -37,17 +34,13 @@
 \item Для $d=1$
 \end{enumerate}
 
-\item Построить солитонное решение стационарного уравнения Кортевега-де-Вриза. Написать программу, моделирующую динамику начально-граничной задачи с несколькими солитонами при $t=0$.
+\item Построить солитонное решение стационарного уравнения Кортевега-де-Вриза.
+Написать программу, моделирующую динамику начально-граничной задачи с
+несколькими солитонами при $t=0$.
 
-\setcounter{eee}{\value{enumi}}
-\end{enumerate}
-
-
-\subsection*{Задачи на 9 баллов.}
-
-\begin{enumerate}
-\setcounter{enumi}{\value{eee}}  % restore the numbering
-
+\item Построить солитонное решение одномерного уравнения синус-Гордона (кинк).
+Написать программу, моделирующую динамику двух кинков для различных начальных
+условий.
 
 \item Рассмотрим изотермы реального  на плоскости $p$-$V$. При температурах ниже критической на изотермах появляется область сосуществования жидкость-газ, и зависимость $p(V)$ становится немонотонной. Фактически же давление остается постоянным во всей области сосуществования, причем положение горизонтального участка изотермы определяется правилом Максвелла и геометрически находится из равенства площадей участков изотермы. Построить изотермы газа с учетом конструкции Максвелла.
 \textit{Указание: Первым действием найти критические параметры и переписать уравнение состояния в безразмерных единицах.}
@@ -95,7 +88,74 @@ $$
 \item Рассмотрим частицу в одномерной прямоугольной яме ширины $a$. Добавим потенциал вида $V_0 x (x-a)$. Найти уровни энергии  и волновые функции, используя в качестве невозмущенного базиса состояния частицы в прямоугольной яме при $V_0 = 0$. Сравнить с результатами теории возмущений.
 
 
+\item Упрощенно промоделировать движение планет солнечной системы, учитывая
+взаимное притяжение всех тел. Считать систему двумерной (рассмотреть плоскость
+вращения планет вокруг Солнца), а планеты и Солнце материальными точками.
+Считать, что в начальный момент времени все планеты находятся на одной линии на
+соответствующем их реальным орбитам радиальном расстоянии и имеют наблюдаемые
+орбитальные скорости. Провести моделирование на таком временном интервале, чтобы
+все планеты совершили хотя бы один полный оборот.
 
+\item Упрощенно промоделировать движение системы Солнце-Земля-Луна, учитывая
+взаимное притяжение всех тел. Считать систему двумерной (рассмотреть плоскость
+вращения планет вокруг Солнца), а космические тела материальными точками.
+Считать, что в начальный момент времени Земля и Луна лежат на одной линии от
+Солнца на соответствующем им радиальном расстоянии и имеют реально наблюдаемые
+скорости вращения.
+
+\item Рассмотреть движение электрона в постоянных магнитном и электрическом
+полях ($\hat{B}=B_0 \hat{e_z}$, $\hat{E}=E_0 \hat{e_z}$), направленных
+перендикулярно друг к другу. Сила Лоренца, действующая на заряженную частицу:
+$F=q(E+\frac{1}{c}[V \times B])$, где $q$ -- заряд частицы, $V$ -- ее скорость.
+\subitem Получить аналитическое выражение для координат и скоростей частицы и
+построить ее траекторию для $B_0=10 \; nT, \; E_0=2 \; mV/m, \; r_0=[100,0,0] \; km, \; V_0=[100, 50, 200] \; km/s$.
+
+\subitem Методом Рунге-Кутты построить траекторию частицы в случае, если
+магнитное поле не постоянно, а задано формулой:
+$\hat{B}=B_0 \tanh(x/L) \hat{e_z}$, где $B_0=10nT$, $L=1000 km$. Начальные
+условия взять то же, что в предыдущем пункте. Чем качественно поведение системы
+отличается в случае постоянного и переменного поля?
+
+\item Рассмотрим простейшее одномерное уравнение диффузии функции
+распределения частиц по импульсам:
+\begin{equation}\label{Diffusion}
+\frac{\partial f}{\partial t}=\frac{\partial}{\partial p}\left(D\frac{\partial f}{\partial p} \right)
+\end{equation}
+
+В тривиальном случае, когда $D=\mathrm{const}$, оно имеет аналитическое решение.
+\subitem Получить аналитическое решение уравнения \eqref{Diffusion} в случае,
+когда $D=1$, $f(t=0,p)=\delta(p)$.
+\textit{Указание: для решения задачи перейти к Фурье-пространству, т.е.
+рассмотреть уравнение на Фурье-образ функции распределения.}
+\subitem Численно решить уравнение \eqref{Diffusion} при тех же условиях, что и в
+предыдущем пункте на временном интервале (после обезразмеривания системы) $t=[0,100]$.
+\subitem К решению уравнения диффузии можно подойти и с другой стороны:
+при диффузии траектория каждой частицы в фазовом пространстве является случайной,
+т.е. для ее описания можно использовать модель случаного блуждания. Можно показать,
+что импульс каждой частицы будет являться случайной величиной и его изменение в каждый
+момент времени можно описать формулой:
+\begin{equation}
+p(t+dt)=p(t)+\sqrt{2D}W_t
+\end{equation}
+где $W_t=\varepsilon \sqrt{dt}$ -- изменение Винеровского процесса,
+$\varepsilon\sim N(0,1)$ -- нормально-распределенная случайная величина.
+
+Напишите программу, которая будет моделировать случайные фазовые траектории
+$\sim 10^6$ частиц и позволит проследить эволюцию функции распределения во времени.
+Для этого нужно: 1) задать ансамбль частиц с импульсами, удовоетворяющими
+начальному условию, 2) задать шаг по времени, 3) для каждой частицы на каждом
+шаге сгенерерировать нормальное случайное число и рассчитать изменение импульса, 
+4) собрать функцию распределения частиц, зная импульс каждой частицы
+(бинировать импульсы и посчитать, какое количество частиц попало в каждый бин).
+
+\subitem Сравнить все три полученных решения.
+
+
+\item Промоделировать движение электрона в поле Земного магнитного диполя.
+Считать, что в начальный момент времени частица находилась в точке
+$r=[7 R_E,0,0]$, где $R_E$ -- радиус Земли (6371 км), имела скорость
+$V=[10,20,10] km/s$. Диполь находится в начале координат, а его ось
+направлена вдоль оси $z$. Какие периодические движения наблюдаются в системе?
 \end{enumerate}
 
 \end{document}
