--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -1,5 +1,4 @@
-bplist00Ñ_WebMainResourceÕ	
-_WebResourceData_WebResourceMIMEType_WebResourceTextEncodingName^WebResourceURL_WebResourceFrameNameOXá<html><head></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">{
+{
  "cells": [
   {
    "cell_type": "markdown",
@@ -163,7 +162,7 @@ bplist00Ñ_WebMainResourceÕ
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install sobol_seq &lt;-- uncomment to install sobol_seq\n",
+    "#!pip install sobol_seq <-- uncomment to install sobol_seq\n",
     "import sobol_seq"
    ]
   },
@@ -555,4 +554,3 @@ bplist00Ñ_WebMainResourceÕ
  "nbformat": 4,
  "nbformat_minor": 4
 }
-</pre></body></html>Ztext/plainUUTF-8_Xhttps://raw.githubusercontent.com/Alexander-Lukin/CP2020/master/week_9_Monte-Carlo.ipynbP    ( : P n } ”YyY„YŠYå                           Yæ
