--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -372,9 +372,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How we can see: \n",
+    "## How we can see: \n",
     "1) Sobol quasirandom sequences need much less time than classical Monte-Carlo\n",
-    "2) Sobol needs less points to achieve the same"
+    "2) Sobol needs less points to achieve the same accuracy"
    ]
   },
   {
@@ -457,7 +457,8 @@
    "source": [
     "def getDeltaE(i, j, state):\n",
     "    '''\n",
-    "    Функция расчитывает изменение энергии ячейки (i,j) в случае ее переворота (при этом функция сама не меняет сосотояния state)\n",
+    "    Функция расчитывает и возвращает изменение энергии ячейки (i,j) в случае ее переворота (не меняя состояния state)\n",
+    "    \n",
     "    ---------\n",
     "    Аргументы:\n",
     "    i - int, адресс ячейки вдоль оси 0\n",
@@ -488,7 +489,8 @@
    "source": [
     "def makeFlip(T, state):\n",
     "    '''\n",
-    "    Функция расчитывает изменение энергии ячейки (i,j) в случае ее переворота (при этом функция сама не меняет сосотояния state)\n",
+    "    Функция N^2 раз переворачивает спин, и принимает решение оставить его перевернутым или нет, согласно правилам 4. и 5.\n",
+    "    \n",
     "    ---------\n",
     "    Аргументы:\n",
     "    T - float, положительное число, безразмерный коэфициент, характеризующий температуру, равный kT/J\n",
