--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -450,9 +450,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[-1  1  1 ... -1 -1 -1]\n [ 1  1 -1 ... -1 -1 -1]\n [ 1  1 -1 ... -1 -1 -1]\n ...\n [ 1  1 -1 ... -1  1  1]\n [-1  1 -1 ...  1  1  1]\n [-1  1 -1 ...  1 -1  1]]\n"
+    }
+   ],
    "source": [
     "def getInitialState(N):\n",
     "    '''\n",
@@ -464,6 +470,7 @@
     "    Функция возвращает:\n",
     "    state - numpy ndarray of ints, массив состояния системы размера NxN\n",
     "    '''\n",
+    "    state = np.random.choice([-1,1],size=(N,N))\n",
     "    return state"
    ]
   },
