--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.special as sp\n",
     "rndm = np.random.RandomState(12345)\n",
+    "import random\n",
     "\n"
    ]
   },
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,13 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Collecting sobol_seq\n  Using cached sobol_seq-0.2.0-py3-none-any.whl (9.2 kB)\nRequirement already satisfied: numpy in /Users/maksimparfenov/anaconda3/lib/python3.7/site-packages (from sobol_seq) (1.17.2)\nRequirement already satisfied: scipy in /Users/maksimparfenov/anaconda3/lib/python3.7/site-packages (from sobol_seq) (1.3.1)\nInstalling collected packages: sobol-seq\nSuccessfully installed sobol-seq-0.2.0\n"
+     "text": "Requirement already satisfied: sobol_seq in /Users/maksimparfenov/anaconda3/lib/python3.7/site-packages (0.2.0)\nRequirement already satisfied: numpy in /Users/maksimparfenov/anaconda3/lib/python3.7/site-packages (from sobol_seq) (1.17.2)\nRequirement already satisfied: scipy in /Users/maksimparfenov/anaconda3/lib/python3.7/site-packages (from sobol_seq) (1.3.1)\n"
     }
    ],
    "source": [
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -450,15 +451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[[-1  1  1 ... -1 -1 -1]\n [ 1  1 -1 ... -1 -1 -1]\n [ 1  1 -1 ... -1 -1 -1]\n ...\n [ 1  1 -1 ... -1  1  1]\n [-1  1 -1 ...  1  1  1]\n [-1  1 -1 ...  1 -1  1]]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def getInitialState(N):\n",
     "    '''\n",
@@ -483,10 +478,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def getEnergyone(i,j,state): #рассчет энергии одной ячейки с тороидальными краевыми условиями\n",
+    "    if i+1 > state.shape[0]-1 and j+1>state.shape[1]-1:\n",
+    "        E = state[i,j]*state[i-1,j]+state[i,j]*state[i,j-1]+state[i,j]*state[0,j]+state[i,j]*state[i,0]\n",
+    "    if i+1 > state.shape[0]-1 and j+1<state.shape[1]-1:\n",
+    "        E = state[i,j]*state[i-1,j]+state[i,j]*state[i,j-1]+state[i,j]*state[0,j]+state[i,j]*state[i,j+1]\n",
+    "    if i+1 < state.shape[0]-1 and j+1>state.shape[1]-1:\n",
+    "        E = state[i,j]*state[i-1,j]+state[i,j]*state[i,j-1]+state[i,j]*state[i+1,j]+state[i,j]*state[i,0]\n",
+    "    if i-1 < 0 and j-1<0:\n",
+    "        E = state[i,j]*state[state.shape[0]-1,j]+state[i,j]*state[i,state.shape[1]-1]+state[i,j]*state[i+1,j]+state[i,j]*state[i,j+1]\n",
+    "    if i-1 < 0 and j-1>0:\n",
+    "        E = state[i,j]*state[state.shape[0]-1,j]+state[i,j]*state[i,j-1]+state[i,j]*state[i+1,j]+state[i,j]*state[i,j+1]\n",
+    "    if i-1 > 0 and j-1<0:\n",
+    "        E = state[i,j]*state[i-1,j]+state[i,j]*state[i,state.shape[1]-1]+state[i,j]*state[i+1,j]+state[i,j]*state[i,j+1]\n",
+    "    if i+1 < state.shape[0]-1 and j+1<state.shape[1]-1 and i-1 > 0 and j-1>0:\n",
+    "        E = state[i,j]*state[i-1,j]+state[i,j]*state[i,j-1]+state[i,j]*state[i+1,j]+state[i,j]*state[i,j+1]\n",
+    "    return E\n",
+    "\n",
     "def getDeltaE(i, j, state):\n",
     "    '''\n",
     "    Функция расчитывает и возвращает изменение энергии ячейки (i,j) в случае ее переворота (не меняя состояния state)\n",
@@ -500,7 +512,9 @@
     "    Функция возвращает:\n",
     "    dE - float, изменение энергии\n",
     "    '''\n",
-    "    \n",
+    "    E1 = getEnergyone(state,i,j)\n",
+    "    state[i,j] = -state[i,j]\n",
+    "    dE = getEnergyone(state,i,j) - E1\n",
     "    return dE"
    ]
   },
@@ -515,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +545,13 @@
     "    Функция возвращает:\n",
     "    state - numpy ndarray of ints, массив нового состояния системы размера NxN\n",
     "    '''\n",
-    "    \n",
+    "    x,y = rndm.randint(low= -100, high= 101, size=(2, (state.shape[0])^2))\n",
+    "    for i in range(0,x.shape[0]):\n",
+    "        dE = getDeltaE(x[i],y[i],state)\n",
+    "        if dE< 0:\n",
+    "            state[x[i],y[i]]= -state[x[i],y[i]]\n",
+    "        if dE >0:\n",
+    "            state[x[i],y[i]] = random.choices([state[x[i],y[i]],-state[x[i],y[i]]],weights=[1-np.exp(-dE/T),np.exp(-dE/T)])\n",
     "    return state"
    ]
   },
@@ -544,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +578,10 @@
     "    Функция возвращает:\n",
     "    E - float, значение энергии системы\n",
     "    '''\n",
-    "    \n",
+    "    E =0 \n",
+    "    for i in range(0,state.shape[0]):\n",
+    "        for j in range(0,state.shape[0]):\n",
+    "            E+= getEnergyone(i,j,state)\n",
     "    return E"
    ]
   },
@@ -571,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,6 +608,10 @@
     "    Функция возвращает:\n",
     "    M - float, значение намагниченности системы\n",
     "    '''\n",
+    "    M = 0\n",
+    "    for i in range(0,state.shape[0]):\n",
+    "        for j in range(0,state.shape[0]):\n",
+    "            M += state[i,j]\n",
     "    return M"
    ]
   },
@@ -715,9 +742,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitbaseconda8554b98a659b499ab056206ae7f8b3f7"
   },
   "language_info": {
    "codemirror_mode": {
