--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -119,7 +119,7 @@
    ],
    "source": [
     "for j in range (1,4):\n",
-    "    print(getSphereVolumeExact(j))\n",
+    "    print(getSphereVolumeExact(j)) #показаны первые 3 --- это как бы и есть сравнение с известными, сравнил -- одинаковые\n",
     "\n",
     "\n",
     "vol = np.array([])\n",
@@ -234,6 +234,13 @@
     "plt.ylabel('N')\n",
     "plt.yscale('log')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Строил с шагом 10 и размерности 6, потому что дальше 10^6 точек и это космическое время."
    ]
   },
   {
@@ -371,6 +378,13 @@
     "plt.ylabel('N')\n",
     "plt.yscale('log')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тут явно видно насколько лучше они работают скорость быстрее(количество точек на размерности 7 на порядок меньше, чем для псевдослучайных). "
    ]
   },
   {
@@ -1074,7 +1088,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Рассмотрим графики средней энергии и средней намагниченности. \n",
+    "\n",
+    "\n",
+    "1) В энергии мы видим, что мы стартуем на минимуме, что соответсвует моим не очень глубоким знаниям по статфизу, а потом при повышении энергии происходит переход ферромагнетик-парамагнетик и энергия резко меняет свою скорость. \n",
+    "\n",
+    "\n",
+    "2)Про намагниченность всё еще лучше: в окрестности нулевой температуры в равновесии все спины смотрят в одну сторону (смотрите последние 2 картинки), а затем (вроде в точке Кюри) происходит переход ферромагнетик-парамагнетик все спины примерно уравниваются --- намагниченность стремится к нулю."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1162,13 +1184,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Мои знания позволяют сказать что:\n",
+    "\n",
+    "\n",
+    "1) При малых температурах -- это ферромагнетик, в равновесии стремится к упорядочеванию спинов, направлению всех в одну сторону.\n",
+    "\n",
+    "\n",
+    "2) При больших-- парамагнетик, все спины направлены хаотично. Если подшумить полем, станет большее понятно."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write your answer here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
