--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -15,13 +15,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Напишем программу которая реализует решение квадратного уравнения:\n",
+    "1) если отношение парметров превышает 10^(-9), то считаем классическим способом\n",
+    "2) если не превышает, то изменим формулу путем избавления от скобки содержащей малую величину"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import cmath\n",
+    "import math\n",
     "def solve_quad(b, c):\n",
     "    \"\"\"Solve a quadratic equation, x**2 + bx + c = 0.\n",
     "    \n",
@@ -35,7 +44,23 @@
     "    x1, x2 : float or complex\n",
     "       Roots.\n",
     "    \"\"\"\n",
-    "    # ... enter your code here ..."
+    "    d=(b**2-4*c)**0.5\n",
+    "    if abs(c/b)>=10e-9:        #классика   \n",
+    "        x_1 = (-b+d)/2\n",
+    "        x_2 = (-b-d)/2\n",
+    "    if abs(c/b)<=10e-9:   #измененная формула         \n",
+    "        if abs(-b-d) > abs(-b+d):\n",
+    "            x_2 = 2 * c / (-b - d) \n",
+    "            x_1 = (-b - d)/2\n",
+    "        else:\n",
+    "            x_1 = 2 * c / (-b + d) \n",
+    "            x_2 = (-b + d) / 2\n",
+    "    if d == 0:                    \n",
+    "        x_1 = x_2 = x_1.real + x_1.imag*1j\n",
+    "    else:                         \n",
+    "        x_1 = x_1.real + x_1.imag*1j\n",
+    "        x_2 = x_2.real + x_2.imag*1j\n",
+    "    return x_1,x_2"
    ]
   },
   {
@@ -51,10 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import allclose"
@@ -62,10 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "variants = [{'b': 4.0, 'c': 3.0},\n",
@@ -77,25 +98,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "for var in variants:\n",
-    "    x1, x2 = solve_quad(**var)\n",
-    "    print(allclose(x1*x2, var['c']))"
+    "    x_1, x_2 = solve_quad(**var)\n",
+    "    print(allclose(x_1*x_2, var['c']))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Видим, что все тесты прошли успешно"
+   ]
   }
  ],
  "metadata": {
@@ -114,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
