--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -48,12 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def householder(vec):\n",
     "    \"\"\"Construct a Householder reflection to zero out 2nd and further components of a vector.\n",
     "\n",
@@ -73,7 +70,12 @@
     "    if vec.ndim != 1:\n",
     "        raise ValueError(\"vec.ndim = %s, expected 1\" % vec.ndim)\n",
     "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    y = np.zeros_like(vec)\n",
+    "    y[0]=np.linalg.norm(vec)\n",
+    "    u = (vec - y)/np.linalg.norm(vec-y)\n",
+    "    H = np.eye(vec.shape[0]) - 2*np.outer(u, u)\n",
+    "\n",
+    "    return H@vec, H"
    ]
   },
   {
@@ -85,10 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test I.1 (10% of the total grade).\n",
@@ -102,10 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test I.2 (10% of the total grade).\n",
@@ -170,10 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def qr_decomp(a):\n",
@@ -200,16 +196,80 @@
     "    \"\"\"\n",
     "    a1 = np.array(a, copy=True, dtype=float)\n",
     "    m, n = a1.shape\n",
+    "    Q = np.eye(m) \n",
     "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    for i in range(min(m-1, n)):\n",
+    "        vec, H_i = householder(a1[i:, i]) \n",
+    "        E = np.eye(i)\n",
+    "        O = np.zeros((i, m-i))\n",
+    "        O1 = np.zeros((m-i, i))\n",
+    "        Q_shtr_i =np.asarray(np.bmat([[E, O], [O1, H_i]])) \n",
+    "        a1 = Q_shtr_i @ a1 \n",
+    "        Q = Q @ Q_shtr_i.T \n",
+    "        print()             \n",
+    "    return Q, a1\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  [[-1  1  2]\n",
+      " [ 9  5  1]\n",
+      " [ 1  7  1]]\n",
+      "\n",
+      "\n",
+      "Q =  [[-0.10976426  0.24432711  0.96346047]\n",
+      " [ 0.98787834 -0.08022681  0.1328911 ]\n",
+      " [ 0.10976426  0.96636842 -0.23255942]]\n",
+      "\n",
+      "\n",
+      "R =  [[ 9.11043358  5.59797726  0.87811408]\n",
+      " [-0.          6.60777198  1.37479583]\n",
+      " [-0.         -0.          1.82725261]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "QR =  [[-1.  1.  2.]\n",
+      " [ 9.  5.  1.]\n",
+      " [ 1.  7.  1.]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "x-QR [[-0. -0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0. -0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[-1,1, 2], [9, 5, 1], [1, 7, 1]])\n",
+    "print(\"x = \",x)\n",
+    "print(\"Q = \", qr_decomp(x)[0])\n",
+    "print(\"R = \", qr_decomp(x)[1])\n",
+    "print(\"QR = \", qr_decomp(x)[0] @ qr_decomp(x)[1])\n",
+    "print(\"x-QR\", x- qr_decomp(x)[0] @ qr_decomp(x)[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Работает"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Might want to turn this on for prettier printing: zeros instead of `1e-16` etc\n",
@@ -219,11 +279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Test II.1 (20% of the total grade)\n",
     "\n",
@@ -247,16 +315,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "Q =  [[ 0.13665049  0.53601299 -0.09369752  0.7697136   0.30459557]\n",
+      " [ 0.56035895  0.0935397  -0.53326881  0.01839528 -0.62652547]\n",
+      " [ 0.19725922  0.65948912  0.60068463 -0.32384673 -0.24589462]\n",
+      " [ 0.62498418 -0.50418303  0.52144688  0.28453698  0.04822969]\n",
+      " [ 0.48765568  0.12171264 -0.27224305 -0.47049398  0.67223293]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "R =  [[ 1.40152769  1.2514379   0.89523615]\n",
+      " [ 0.          0.84158252  0.68447942]\n",
+      " [ 0.         -0.          0.5496046 ]\n",
+      " [ 0.          0.          0.        ]\n",
+      " [ 0.         -0.         -0.        ]]\n",
+      "QQ =  [[-0.13665049  0.53601299  0.09369752  0.661619   -0.49749149]\n",
+      " [-0.56035895  0.0935397   0.53326881 -0.52477245 -0.34276292]\n",
+      " [-0.19725922  0.65948912 -0.60068463 -0.37879015  0.14784752]\n",
+      " [-0.62498418 -0.50418303 -0.52144688  0.18967657 -0.21750907]\n",
+      " [-0.48765568  0.12171264  0.27224305  0.32774225  0.75222783]] \n",
+      "\n",
+      "RR =  [[-1.40152769 -1.2514379  -0.89523615]\n",
+      " [ 0.          0.84158252  0.68447942]\n",
+      " [ 0.          0.         -0.5496046 ]\n",
+      " [ 0.          0.          0.        ]\n",
+      " [ 0.          0.          0.        ]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "RR-R [[ 0.  0.  0.]\n",
+      " [-0. -0.  0.]\n",
+      " [-0. -0.  0.]\n",
+      " [-0. -0. -0.]\n",
+      " [-0. -0. -0.]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "QQ-Q [[ 0.         -0.         -0.         -0.1080946   0.19289592]\n",
+      " [ 0.         -0.          0.          0.50637718 -0.28376255]\n",
+      " [ 0.          0.         -0.          0.05494342 -0.0980471 ]\n",
+      " [ 0.          0.          0.         -0.09486041  0.16927938]\n",
+      " [ 0.          0.         -0.         -0.14275173  0.0799949 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.linalg import qr\n",
     "qq, rr = qr(a)\n",
     "\n",
-    "assert_allclose(np.dot(qq, rr), a)"
+    "print(\"Q = \", qr_decomp(a)[0])\n",
+    "print(\"R = \", qr_decomp(a)[1])\n",
+    "print(\"QQ = \",qq, \"\\n\")\n",
+    "print(\"RR = \",rr)\n",
+    "print(\"RR-R\", abs(rr)-abs(qr_decomp(a)[1]))\n",
+    "print(\"QQ-Q\", abs(qq)-abs(qr_decomp(a)[0]))\n",
+    "assert_allclose(np.dot(qq, rr), a)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Отличие матриц можно обьяснить тем, что QR разложение не является единсвенным"
    ]
   },
   {
@@ -310,12 +440,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Библиотечная:  [[ 9.11043358  5.59797726  0.87811408]\n",
+      " [ 0.         -6.60777198 -1.37479583]\n",
+      " [ 0.          0.         -1.82725261]] \n",
+      "\n",
+      "Моя реализация:  [[9.11043358 5.59797726 0.87811408]\n",
+      " [0.         6.60777198 1.37479583]\n",
+      " [0.         0.         1.82725261]] \n",
+      "\n",
+      "Разность: [[ 0.  0. -0.]\n",
+      " [ 0.  0. -0.]\n",
+      " [ 0.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def constr_R(a): \n",
+    "    a1 = np.array(a, copy=True, dtype=float)\n",
+    "    m, n = a1.shape\n",
+    "    U = np.zeros_like(a1)\n",
+    "    \n",
+    "    for i in range(min(m-1, n)):\n",
+    "        R = a1[i:, i:]\n",
+    "        vec = R[:, 0]\n",
+    "        \n",
+    "        y = np.zeros_like(vec)\n",
+    "        y[0]=np.linalg.norm(vec)\n",
+    "        u = (vec - y)/np.linalg.norm(vec-y) \n",
+    "        R = R - 2*np.outer(u, u.T @ R) \n",
+    "        a1[i:, i:] = R \n",
+    "        U[:len(vec),i]= u \n",
+    "    return(a1, U)\n",
+    "                        \n",
+    "print(\"Библиотечная: \",qr(x)[1], \"\\n\")\n",
+    "\n",
+    "def constr_R_Q_U(a, U): \n",
+    "    a1 = np.array(a, copy=True, dtype=float)\n",
+    "    m, n = a1.shape\n",
+    "    \n",
+    "    for i in range(min(m-1, n)): \n",
+    "        R = a1[i:, i:]\n",
+    "       \n",
+    "        u = U[:R.shape[0],i]\n",
+    "        R = R - 2*np.outer(u, (u.T) @ R) \n",
+    "        a1[i:, i:] = R \n",
+    "    return a1\n",
+    "print(\"Моя реализация: \",constr_R_Q_U(x, constr_R(x)[1]),\"\\n\")\n",
+    "print(\"Разность:\",abs(qr(x)[1])-abs(constr_R_Q_U(x, constr_R(x)[1])) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Отличие только в знаке"
+   ]
   }
  ],
  "metadata": {
@@ -334,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
