--- a/week_10_boundary_value_problem.ipynb
+++ b/week_10_boundary_value_problem.ipynb
@@ -34,6 +34,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Везде сделан только 2ой порядок!\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -80,7 +87,7 @@
     "    return y\n",
     "\n",
     "#1.2.\n",
-    "def FirstOrderScheme(a,b,A,B,alpha,beta,p,q,f,N=100):\n",
+    "def FirstOrderScheme(a,b,A,B,alpha,beta,p,q,f,N=100): #это нерабочая часть \n",
     "    # in:\n",
     "    # a,b - float, limits of x, N - int, number of grid points\n",
     "    # A,B - float, boundary values\n",
