--- a/HW2.tex
+++ b/HW2.tex
@@ -12,7 +12,7 @@
 \begin{document}
 
 \begin{enumerate}
-\item \textbf{(7)} Докажите следующие неравенства и приведите примеры вектора $x$ и матрицы $A$, при которых эти неравенства достигаются:
+\item \textbf{(7)} Докажите следующие неравенства и приведите примеры вектора $x$ и матрицы $A$, при которых эти неравенства насыщаются:
 \begin{itemize}
 \item $\norm{x}_2 \le \sqrt{m}\norm{x}_\infty$
 \item $\norm{A}_\infty \le \sqrt{n} \norm{A}_2$
@@ -38,11 +38,11 @@ $$
 
 \item \textbf{(10)} Напишите код на Python, который для данной действительной матрицы $A$ строит правые сингулярные вектора $v_1,\; v_2$ (вписанные в окружность) и  левые сингулярные вектора $u_1,\; u_2$ (вписанные в эллипс) -- аналогично Fig. 4.1 Trefethen, Bau. Используйте этот код для матриц из Задачи 2.
 
-\item \textbf{(15)} Рассмотрите матрицы $X$ размером $N\times m$, $ \Omega$ размером $m\times m$ и $ \Delta$ размером $n\times n$. Пусть $V = X \Omega X^T + \Delta$  и
+\item \textbf{(15)} Рассмотрите матрицы $X$ размером $N\times m$, $ \Omega$ размером $m\times m$ и $ \Delta$ размером $n\times n$. Пусть
 $$
 f(A) = A^{-1}X(X^T A^{-1}X)^{-1}.
 $$
-Докажите, предполагая обратимость участвующих матриц, что $f(V)=f(\Delta)$.
+Докажите, предполагая обратимость участвующих матриц, что $$f(X \Omega X^T + \Delta)=f(\Delta).$$
 
 \item \textbf{(15)} \href{https://github.com/ev-br/CP2020/blob/master/week_1_LU_pivoting.ipynb}{Реализуйте LU разложение квадратной матрицы с выбором главного элемента}, следуя инструкциям по ссылке.
 
