--- a/HW2.tex
+++ b/HW2.tex
@@ -1,15 +1,23 @@
-\documentclass[10pt]{article}
-\usepackage{amssymb}
-\usepackage{graphicx,amsmath}
-  \usepackage[utf8]{inputenc}
-  \usepackage[russian]{babel}
+\documentclass[prb,papersize=a4paper,notitlepage]{revtex4-1}%
 \usepackage{hyperref}
+\usepackage{enumitem}
+\usepackage{nicefrac}
+\usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage{amsfonts}
+\usepackage{physics}
+\usepackage{amssymb}
+\usepackage{bm}
+\usepackage[utf8]{inputenc}
+\usepackage[russian]{babel}
 \usepackage{listings}
 
-\textwidth 16.5cm \oddsidemargin 0.5cm \textheight 21cm \topmargin
-1cm
-\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+
 \begin{document}
+
+\title{Вычислительная физика, Осень 2020 ВШЭ. Задание 2.\footnote{Дополнительно указаны: (количество баллов за задачу)[имя задачи на nbgrader]}}
+\maketitle
+
 
 \begin{enumerate}
 \item \textbf{(7)} Докажите следующие неравенства и приведите примеры вектора $x$ и матрицы $A$, при которых эти неравенства насыщаются:
