--- a/HW2.tex
+++ b/HW2.tex
@@ -59,7 +59,7 @@ $$
 \label{wb}
 \left(A+UCV\right)^{-1}=A^{-1}-A^{-1}U\left(C^{-1}+VA^{-1}U\right)^{-1}VA^{-1}.
 \end{equation}
-Рассмотрите частный случай диагональной ($p\times p$) матрицы $A$ и единичной ($k\times k$) матрицы $C$ и напишите функцию `woodbury(A, U, V)' вычисляющую $\left(A+UV\right)^{-1}$ по формуле (\ref{wb}). Проверьте, что Ваша имплементация верна, сравнивая результат с полученным прямолинейным вычислением.
+Рассмотрите частный случай диагональной ($p\times p$) матрицы $A$ и единичной ($k\times k$) матрицы $C$ и напишите функцию \lstinline{woodbury(A, U, V)} вычисляющую $\left(A+UV\right)^{-1}$ по формуле (\ref{wb}). Проверьте, что Ваша имплементация верна, сравнивая результат с полученным прямолинейным вычислением.
 Сравните быстродействие этих двух способов: какой оказывается быстрее и почему? (рассмотрите случайные матрицы с $p = 5000, k = 100$).
 
 
