--- a/HW3.tex
+++ b/HW3.tex
@@ -22,7 +22,7 @@
 \begin{enumerate}
 \item \textbf{(7)} Покажите, что:
 \begin{itemize}
-\item проектор $P$ является ортогональным если и только если $P = P^+$
+\item проектор $P$ является ортогональным если и только если $P = P^T$
 \item если $P$ -- ортогональный проектор, то матрица $I-2P$ унитарна (дайте геометрическую интерпретацию этого факта).
 \end{itemize}
 
