--- a/grading.tex
+++ b/grading.tex
@@ -19,7 +19,7 @@
 \maketitle
 Итоговая оценка за курс определяется по формуле $$0.6\;\textrm{дз} + 0.1\;\textrm{активность} + 0.3\;\textrm{экзамен}.$$
 
-Оценка за дз собирается из сдачи задач (теоретических и практических задач из заданий и технических упражнений по numpy). В течение семестра ожидается 9 заданий, максимально возможный балл по которым составит около 540 баллов (эти баллы указаны в условии каждой задачи). Дополнительные баллы можно заработать, сдавая $\star$ и $\star\star$ упражнения из списка \href{https://github.com/rougier/numpy-100/blob/master/100_Numpy_exercises.md}{100 Numpy exercises}. Эти упражнения оцениваются по формуле $\star = 1.5 \;\textrm{балла}$. Итоговая оценка за дз получается по формуле $$\textrm{дз} = 10\tanh\frac{S}{200},$$ где $S$ -- сумма всех баллов.
+Оценка за дз собирается из сдачи задач (теоретических и практических задач из заданий и технических упражнений по numpy). В течение семестра ожидается 9 заданий, максимально возможный балл по которым составит около 540 баллов (эти баллы указаны в условии каждой задачи). Дополнительные баллы можно заработать, сдавая $\star$ и $\star\star$ упражнения из списка \href{https://github.com/rougier/numpy-100/blob/master/100_Numpy_exercises.md}{100 Numpy exercises}. Эти упражнения оцениваются по формуле $\star = 1.5 \;\textrm{балла}$, так чтот максимально возможный балл за эти упражнения составляет около 140 баллов. Итоговая оценка за дз получается по формуле $$\textrm{дз} = 10\tanh\frac{S}{200},$$ где $S$ -- сумма всех баллов.
 
 Оценка за активность ставится семинаристом (субъективно) в качестве оценки участия в семинарах (вопросы, найденные ошибки и выходы к доске).
 \end{document}
