--- a/HW2.tex
+++ b/HW2.tex
@@ -46,7 +46,7 @@ $$
 
 \item \textbf{(10)} Напишите код на Python, который для данной действительной матрицы $A$ строит правые сингулярные вектора $v_1,\; v_2$ (вписанные в окружность) и  левые сингулярные вектора $u_1,\; u_2$ (вписанные в эллипс) -- аналогично Fig. 4.1 Trefethen, Bau. Используйте этот код для матриц из Задачи 2.
 
-\item \textbf{(15)} Рассмотрите матрицы $X$ размером $N\times m$, $ \Omega$ размером $m\times m$ и $ \Delta$ размером $n\times n$. Пусть
+\item \textbf{(15)} Рассмотрите матрицы $X$ размером $n\times m$, $ \Omega$ размером $m\times m$ и $ \Delta$ размером $n\times n$. Пусть
 $$
 f(A) = A^{-1}X(X^T A^{-1}X)^{-1}.
 $$
